feat: pass message ids with file
when receiving file, client would need to
confirm underlying messages by their ids.
To do so, file received event would carry
their list which can be directly then sent
via ConfirmMessages after file is fully
retrieved and processed
